--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -17,3 +17,5 @@ target_include_directories(src PRIVATE ../include)
 find_package(GTest CONFIG REQUIRED)
 enable_testing()
 target_link_libraries(gradebook-tests GTest::gtest_main src sqlite3)
+
+add_compile_definitions(TEST_ENV)
